@@ -15,10 +15,10 @@
 <form action="{% url search_profiles %}" method="get" id="search">
     <fieldset>
         <legend>
-            Search
+            Enter Name or Reg. Number
         </legend>
         <p>
-            <input type="text" size="17" name="q" class="input-text" />&nbsp;<input type="submit" value="Submit" class="input-submit-02" />
+            <input type="text" size="1" name="q" class="input-text" />&nbsp; <input type="submit" value="Search" class="input-submit-02" />
         </p>
     </fieldset>
 </form>
